// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsTableAddButton > should render normally 1`] = `
<div
  className="mt-6 text-left"
>
  <button
    className="active:shadow-inner hover:shadow-sm justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 flex items-center gap-2"
    disabled={false}
    onClick={[MockFunction spy]}
  >
    <svg
      className="lucide lucide-plus"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="M12 5v14"
      />
    </svg>
    Add new shortcut
  </button>
</div>
`;

exports[`SettingsTableAddButton > should render with disabled button 1`] = `
<div
  className="mt-6 text-left"
>
  <button
    className="active:shadow-inner hover:shadow-sm justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 flex items-center gap-2"
    disabled={true}
    onClick={[MockFunction spy]}
  >
    <svg
      className="lucide lucide-plus"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="M12 5v14"
      />
    </svg>
    Add new shortcut
  </button>
</div>
`;
